tests/type_check/declaration/validate_undeclared_field_type.err.expected
error: at 1:12: [TC-InvalidDeclaredType] In struct 'S', field 'x': Use of undeclared type 'Nope'
   |
 1 | struct S { x: Nope }
   |            ^^^^^^^
